# LocalStackS3Tests

./: .gitignore  README.md  pyproject.toml
app/source/: create_data.py  create_data.txt  main.py
app/source/functions/: data_generate_pandas.py  data_generate_polars.py  s3_functions.py
